# AoC

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  nob.c  nob.exe.old
2015/: CMakeLists.txt  Day01.c  Day02.c  Day03.c
include/: MY2015STUFF.h  arena.h
nob/: CMakeLists.txt  main.c  nob.c  nob.h  nob.i
