cmake_minimum_required(VERSION 3.23)
project(AoC)
add_compile_options(/GS /GF /W4 )
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD CXX20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(VS_CONFIG_DIR "${CMAKE_BINARY_DIR}/.vs")
add_subdirectory(include)
add_subdirectory(2015)
