cmake_minimum_required(VERSION 3.8)
# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()
project("AoC" LANGUAGES C)
add_compile_options(/GS /GF /W4 )
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD CXX20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(VS_CONFIG_DIR "${CMAKE_BINARY_DIR}/.vs")
set(CMAKE_TOOLCHAIN_FILE "C:/Users/robert.orton/OneDrive/AoC/vcpkg/scripts/buildsystems/vcpkg.cmake")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(include)
add_subdirectory(2015)
